--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -11,6 +11,10 @@
     font-family:Verdana, Arial, Helvetica, sans-serif;
 }
 
+.btnEliminar{
+    background:rgb(68, 17, 17);
+}
+
 .etiqueta {
     margin-left: 40px;
     font-size: 30px;
@@ -253,8 +257,8 @@ tr:nth-child(even){
 }
 
 tr:hover td{
-	background-color: #637294;
-	color: white;
+	background-color: #b4bacc;
+	color: black;
     transition: all .3s;
 
 }
@@ -396,6 +400,9 @@ section{
 }
 .center{
     width: 600px;
+    margin: 0 auto;
+}
+.center1{
     margin: 0 auto;
 }
 @media (max-width: 550px){
