--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -54,10 +54,10 @@
     color:rgb(64, 61, 204);
 }
 .opciones:hover .icons{
-    border-radius:49%;
-    -webkit-border-radius:49%;
+    border-radius:50%;
+    -webkit-border-radius:50%;
     box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 0px 0px 15px 15px #7983ce;
+    -webkit-box-shadow: 0px 0px 15px 15px #0d1a70;
     -webkit-transform:scale(1.0);transform:scale(1.0);
     width: 160px;
     height: 160px;
@@ -75,7 +75,7 @@
 
 .sombra:hover{
     box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #555555;
+    -webkit-box-shadow: 5px 5px 5px 5px #333333;
     -webkit-transform:scale(1.085);transform:scale(1.085);
     
     
@@ -93,7 +93,7 @@
 }
 .sombraAzul:hover{
     box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #afbaf8;
+    -webkit-box-shadow: 5px 5px 5px 5px #545b81;
     -webkit-transform:scale(1.085);transform:scale(1.085);
     
     
@@ -175,7 +175,7 @@
     font-family:Verdana, Arial, Helvetica, sans-serif;
 }
 
-nav{
+.nav1{
     background: #fff;
     height: 85px;
     width: 100%;
@@ -280,15 +280,17 @@ tr:hover td{
 
 .checkbtn{
     color: rgb(12, 12, 12);
-    float: right;
     font-size: 30px;
     margin-top: 25px;
     margin-right: 15px;
     margin-left: 20px;
     cursor: pointer;
-    display: none;
 }
 
+
+#check:checked ~ul{
+    left:0;
+}
 .contenedor2{
       
     margin-right: 0px;
@@ -297,6 +299,19 @@ tr:hover td{
   
     
   }
+
+  .divfiltros{
+    width: 20%; 
+    margin-right: 80px; 
+    float:right;
+    padding: 30px;
+    background: rgb(216, 216, 216);
+
+  }
+
+  #filtro:checked ~ table{
+    display:none;
+    }
 
 
   .app {
@@ -321,24 +336,132 @@ tr:hover td{
     cursor: pointer;
 }
 
-.puntuar {
+.interacciones1{
+    color: rgb(134, 48, 48);
+    font-size: 35px;
+    line-height: 80px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
     cursor: pointer;
-  }
-
-  .puntuacion{
-    color: yellow;
-  }
-
- 
-
-.interacciones:hover{
-    color: #fff;
 }
+
+
+
+
+
+
 
 #check{
     display: none;
 }
 
+#modalfiltro::backdrop{
+    background-color: rgba(207, 48, 48, 0.55);
+}
+
+.container-menu .cont-menu nav a{
+    text-align: center;
+    font-size: 22px;
+}
+.container-menu{
+    position: absolute;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100vh;
+    top: 80;left: 0;
+    transition: all 500ms ease;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+}
+#check:checked ~ .container-menu{
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.cont-menu{
+    width: 100%;
+    max-width: 300px;
+    background: #00133a;
+    height: 100vh;
+    position: relative;
+    transition: all 500ms ease;
+    transform: translateX(-100%);
+}
+#check:checked ~ .container-menu .cont-menu{
+    transform: translateX(0%);
+}
+.cont-menu nav{
+    transform: translateY(15%);
+}
+.cont-menu nav a{
+    display: block;
+    text-decoration: none;
+    padding: 30px;
+    color: #c7c7c7;
+    border-left: 5px solid transparent;
+    transition: all 400ms ease;
+}
+.cont-menu nav a:hover{
+    border-left: 5px solid #c7c7c7;
+    background: #1e2a57;
+}
+.cont-menu label{
+    position: absolute;
+    right: 5px;
+    top: 10px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+
+#check{
+    display: none;
+}
+
+#check:checked ~ .container-menu{
+    display: block;
+}
+.container-menu{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+
+}
+
+.cont-menu{
+    width: 100%;
+    max-width: 250px;
+    position: relative;
+    transition: all 5000ms ease;
+}
+
+.cont-menu nav{
+    transform: translateY(15%);
+}
+
+.cont-menu nav a{
+    display: block;
+    text-decoration: none;
+}
+*/
 .elhov{
     color:rgb(43, 42, 42);
 }
@@ -394,14 +517,18 @@ section{
 
 .homeimg{
     margin-left: 0%; 
-    width: 800px;  
-    height: 400px;
+    margin-top: 20px;
+    width: 650px;
+    height: 700px;
+    border-radius: 10px;
 }
 .homeimg1{
-    margin-left: 5%;
+    margin-left: 2%;
+    margin-bottom: 50px;
+
     text-align: center;
 
-    width: 500px;  
+    width: 550px;  
     height: 250px;
 }
 
@@ -430,12 +557,19 @@ section{
     margin-top: 150px
 }
 @media (max-width: 550px){
+    
    
 }
 @media (max-width: 1350px){
     .homeimg{
-        margin-left: 0%; 
-        
+
+        margin-left: -40%; 
+        width: 500px;  
+        height: 520px;
+        margin-top: 200px;
+        width: 550px;
+        height: 580px;
+        border-radius: 10px;
     }
 
     .perfil{
