--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -73,6 +73,15 @@
     width: 15%;
 }
 
+.mystyle{
+    box-shadow: 0px 15px 15px 15px #a87a25;
+    -webkit-box-shadow: 5px 5px 5px 5px #333333;
+    -webkit-transform:scale(1.085);transform:scale(1.085);
+    
+    
+    transition: all .2s;
+}
+
 .sombra:hover{
     box-shadow: 0px 15px 15px 15px #a87a25;
     -webkit-box-shadow: 5px 5px 5px 5px #333333;
@@ -305,7 +314,18 @@ tr:hover td{
     margin-right: 80px; 
     float:right;
     padding: 30px;
-    background: rgb(216, 216, 216);
+    background: rgb(255, 255, 255);
+    border:none;
+    border-radius: 5px;
+    transition: all .5s;
+
+
+    box-shadow: 0px 15px 15px 15px #a87a25;
+    -webkit-box-shadow: 5px 5px 5px 5px #616161;
+    -webkit-transform:scale(1.085);transform:scale(1.085);
+    
+    
+    transition: all .5s;
 
   }
 
