--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -77,10 +77,26 @@
     box-shadow: 0px 15px 15px 15px #a87a25;
     -webkit-box-shadow: 5px 5px 5px 5px #333333;
     -webkit-transform:scale(1.085);transform:scale(1.085);
+
     
+
     
     transition: all .2s;
 }
+@keyframes createBox {
+    from {
+      transform: scale(0);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+
+
+  dialog::backdrop {
+    background-color: rgb(20, 18, 15);
+    opacity: 1;
+  }
 
 .sombra:hover{
     box-shadow: 0px 15px 15px 15px #a87a25;
@@ -88,7 +104,8 @@
     -webkit-transform:scale(1.085);transform:scale(1.085);
     
     
-    transition: all .1s;
+    transition: all .3s;
+    border-radius: 2px;
 
 }
 .sombraRoja:hover{
@@ -98,6 +115,7 @@
     
     
     transition: all .1s;
+
 
 }
 .sombraAzul:hover{
@@ -114,8 +132,10 @@
     -webkit-box-shadow: 5px 5px 5px 5px #001d5a;
     -webkit-transform:scale(1.085);transform:scale(1.085);
     
-    
-    transition: all .1s;
+    transition: all .3s;
+    border-radius: 2px;
+
+
 
 }
 .sombraVerde:hover{
