--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -748,8 +748,8 @@ section{
         border-left: none;
     }
     .center2{
-        width: 500px;
-        margin-left: -3%;
+        width: 600px;
+        margin: 0 auto;
 
     
     }
