--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -155,9 +155,7 @@ body{
   }
 
 .sombra:hover{
-    box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #333333;
-    -webkit-transform:scale(1.085);transform:scale(1.085);
+    -webkit-box-shadow: 2px 2px 2px 2px #333333;
     
     
     transition: all .3s;
@@ -165,9 +163,7 @@ body{
 
 }
 .sombraRoja:hover{
-    box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #c98080;
-    -webkit-transform:scale(1.085);transform:scale(1.085);
+    -webkit-box-shadow: 2px 2px 2px 2px #c98080;
     
     
     transition: all .1s;
@@ -175,18 +171,20 @@ body{
 
 }
 .sombraAzul:hover{
-    box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #545b81;
-    -webkit-transform:scale(1.085);transform:scale(1.085);
+    -webkit-box-shadow: 2px 2px 2px 2px #545b81;
     
     
     transition: all .1s;
 
 }
+.botones{
+    
+
+
+
+}
 .sombraAzul1:hover{
-    box-shadow: 0px 15px 15px 15px #a87a25;
-    -webkit-box-shadow: 5px 5px 5px 5px #001d5a;
-    -webkit-transform:scale(1.085);transform:scale(1.085);
+    -webkit-box-shadow: 2px 2px 2px 2px #17598f;
     
     transition: all .3s;
     border-radius: 2px;
@@ -381,6 +379,9 @@ tr:not(.exclude, .total, .semaforoRojo, .semaforoVerde, .semaforoAmarillo):hover
 }
 
 
+.padding{
+    padding: 50px;
+}
 
 
 .yo1{
@@ -693,7 +694,7 @@ input::-webkit-inner-spin-button {
 
 
 .azul{
-    background: #001d5a;
+    background: #025396;
     border: none;
 }
 section{
